--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ before_script:
     - npm i -g istanbul mocha codeclimate-test-reporter
 after_success:
     - istanbul cover _mocha -- -R spec ./test/*.js
-    - codeclimate < ./coverage/lcov.info
+    - codeclimate-test-reporter < ./coverage/lcov.info
